# sentiment_analysis_api_with_fastapi

./: .env.example  .gitignore  .pylintrc  Makefile  README.md  _requirements.txt  alembic.ini  commands.md  docker-compose.prod.yaml  docker-compose.template.yml  docker-compose.yaml  docker-compose.yml  docker_compose copy.yml  docker_compose.yml  main.py  project_details.md  pyproject.toml  requirements.txt  requirements_ci.txt  requirements_no-version.txt  run.sh  run_tests.sh
.environment/: .env.dev  .env.shared  .env.test
alembic/: env.py
alembic/versions/: 3a9c0292e366_.py  70028b275bc0_.py
app/: database.py  devtools.py  main.py  models.py  schemas.py
app/api/: auth_utils.py  database.py  deps.py  devtools.py  main copy.py  main.py  models.py  utils.py
app/common_utils/: schemas.py
app/inference/: worker.py
app/ml_models/: bert_sentiment.py  nlp_utils.py  roberta_emotion.py
app/routers/: admin.py  auth.py  bert_sentiment.py  roberta_emotion.py  users.py
docker/api/: Dockerfile.api  build.sh  requirements.txt
docker/inference/: Dockerfile.inference  build.sh  push.sh  requirements.txt
docker/migrate/: Dockerfile.migrate  build.sh  push.sh
docker/postgres/: init.sql  init.sql.template
project/: __init__.py  celery_utils.py  config.py  database.py  sqladmin.py
project/fu_core/: __init__.py  tokens.py  (+1 more)
test/: test_admin.py  test_auth.py  test_main.py  test_ml_service_v1.py  test_ml_service_v2.py  test_users.py  utils.py
tests/: test_admin.py  test_auth.py  test_main.py  test_ml_service_v1.py  test_ml_service_v2.py  test_users.py  utils.py
(+24 files in other folders)
