[tool.poetry]
name = "sentiment-analysis-api-with-fastapi"
version = "0.1.0"
description = ""
authors = ["MatthieuLeNozach <matthieu.le.nozach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
python-multipart = "^0.0.9"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
celery = "^5.4.0"
redis = "^5.0.6"
flower = "^2.0.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
watchfiles = "^0.22.0"
jinja2 = "^3.1.4"
requests = "^2.32.3"
asgiref = "^3.8.1"
asyncio-redis = "^0.16.0"
broadcaster = "^0.2.0"
python-socketio = "^5.11.2"
pytest = "^8.2.2"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
pytest-factoryboy = "^2.7.0"
pytest-cov = "^5.0.0"
pillow = "^10.3.0"
gunicorn = "^22.0.0"
loguru = "^0.7.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
fastapi-cli = "^0.0.4"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
sqladmin = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
